--- a/anime-detail.html
+++ b/anime-detail.html
@@ -218,6 +218,7 @@
   <audio id="Maomao1-ost" loop><source src="https://www.dropbox.com/scl/fi/rzk39yz830r8qqwh236z5/Mrs.-GREEN-APPLE.mp3?rlkey=4yg7zzw70lbl3w5pnzatmy8d7&st=tcuzvxlo&raw=1" type="audio/mpeg"></audio>
   <audio id="Maomao2-ost" loop><source src="https://www.dropbox.com/scl/fi/zv6jviz9o2qcnujlhlbwq/Kusuriya-no-Hitorigoto-Season-2-Opening-Full-Hyakka-Ryouran-by-Lilas-Ikuta-Sub.-Espa-ol.mp3?rlkey=zormm7udq5mzrwx5u0qli78ml&st=uj2wxfzw&raw=1" type="audio/mpeg"></audio>
   <audio id="Maomao3-ost" loop><source src="https://www.dropbox.com/scl/fi/youf3p9vfcf57zg3i9kfz/ED-24-55.mp3?rlkey=4crxopjhxx8b3dd68lt42gc6e&st=k65gdc5m&raw=1" type="audio/mpeg"></audio>
+  <audio id="uzumaki-ost" loop><source src="https://www.dropbox.com/scl/fi/tq7x8abap01qs1jex5aqy/Uzumaki-Opening-theme-Song-Intro-Anime.mp3?rlkey=qjauevwei7uihfnvx8etdvl7f&st=iewsreh2&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2514,7 +2515,23 @@
           }
         ]
       },
-
+      44: {
+        title: "Uzumaki",
+        desc: "Kurozu-cho, un pequeño pueblo rodeado de niebla en la costa de Japón, está maldito. Según Shuichi Saito, el novio retraído de la adolescente Kirie Goshima, su pueblo no está embrujado por una persona o un ser, sino por un patrón: uzumaki, la espiral, la hipnótica forma secreta del mundo. Se manifiesta en todo, desde conchas marinas y remolinos en el agua hasta las marcas en espiral en los cuerpos de las personas, las obsesiones insanas del padre de Shuichi y la voz de la cóclea en nuestro oído interno. A medida que la locura se extiende, los habitantes de Kurozu-cho se ven arrastrados cada vez más a un remolino del que no hay retorno.",
+        cover: "uzumakii.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/cmnpn6u7tcm3qgwoe77k6/81CfbcFFyHL._SL1500_.jpg?rlkey=kr5vd2y6gxg5jqxh1ews0trgp&st=egg0cx1h&raw=1",
+            eps: [
+              { title: "Uzumaki T1 Cap 1"},
+              { title: "Uzumaki T1 Cap 2"},
+              { title: "Uzumaki T1 Cap 3"},
+              { title: "Uzumaki T1 Cap 4"},
+            ]
+          }
+        ]
+      },
 
 
     };
@@ -2701,6 +2718,7 @@
         40: ['OnePunch-ost'],
         41: ['Mashle-ost'],
         42: ['Maomao1-ost','Maomao2-ost','Maomao3-ost'],
+        44: ['uzumaki-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
