--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
       {id:41, title:"Mashle", aliases: ["Mash Burnedead"], img:"mashle1.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Aventura","Shōnen"]},
       {id:42, title:"Los Diarios de la Boticaria", aliases: ["Kusuriya no Hitorigoto","The Apothecary Diaries"], img:"maomaot1.jpg", rating:4.9, genres:["Drama","Misterio","Romance","Shōjo"]},
       {id:43, title:"Maplestar", img:"pm.png", rating:5, genres:["Hentai"]},
+      {id:44, title:"Uzumaki", img:"uzumakii.jpg", rating:4.2, genres:["Seinen","Horror"]},
     ];
 
 
