--- a/video-player.html
+++ b/video-player.html
@@ -1636,7 +1636,14 @@
           "1": { link:'https://www.dropbox.com/scl/fi/zhsdyr8t1pee4b8p4xfms/The-Rising-of-the-Shield-Hero-Maplestar.mp4?rlkey=hu238mo45s3sckdqlucq15xj3&st=62npwezw&raw=1', title:'The Rising of the Shield Hero - Maplestar' },
         }
       },
-
+      "44": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/07tv851yfk50xhiovkxqq/Uzumaki-Capitulo-1.mp4?rlkey=rzayx6wnh3j71xluw3je9lk41&st=ox2fmmyq&raw=1', title:'Uzumaki T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/60weznpremimsh90nwnd3/Uzumaki-Capitulo-2.mp4?rlkey=omfd54ncj7mrtkakrfs403j2a&st=80jclck9&raw=1', title:'Uzumaki T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/cj4vi9c0f45rz2cyf0whp/Uzumaki-Capitulo-3.mp4?rlkey=h7q9tgu1q951rt1w2xdileqki&st=si6ihhv0&raw=1', title:'Uzumaki T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/0r4pyft3zz08g4bozm49y/Uzumaki-Capitulo-4.mp4?rlkey=ff2nfzzcar0cm4rlak0w16kmf&st=o8ilvoba&raw=1', title:'Uzumaki T1 Cap 4' },
+        }
+      },
 
 
 
