--- a/anime-detail.html
+++ b/anime-detail.html
@@ -218,7 +218,9 @@
   <audio id="Maomao1-ost" loop><source src="https://www.dropbox.com/scl/fi/rzk39yz830r8qqwh236z5/Mrs.-GREEN-APPLE.mp3?rlkey=4yg7zzw70lbl3w5pnzatmy8d7&st=tcuzvxlo&raw=1" type="audio/mpeg"></audio>
   <audio id="Maomao2-ost" loop><source src="https://www.dropbox.com/scl/fi/zv6jviz9o2qcnujlhlbwq/Kusuriya-no-Hitorigoto-Season-2-Opening-Full-Hyakka-Ryouran-by-Lilas-Ikuta-Sub.-Espa-ol.mp3?rlkey=zormm7udq5mzrwx5u0qli78ml&st=uj2wxfzw&raw=1" type="audio/mpeg"></audio>
   <audio id="Maomao3-ost" loop><source src="https://www.dropbox.com/scl/fi/youf3p9vfcf57zg3i9kfz/ED-24-55.mp3?rlkey=4crxopjhxx8b3dd68lt42gc6e&st=k65gdc5m&raw=1" type="audio/mpeg"></audio>
+  <audio id="Maplestar-ost" loop><source src="https://www.dropbox.com/scl/fi/ks7rvqfmw6lnyisdz07de/dfgdfg.mp3?rlkey=w76qkjl9t2yer2u9xwf8041v8&st=189sbps1&raw=1" type="audio/mpeg"></audio>
   <audio id="uzumaki-ost" loop><source src="https://www.dropbox.com/scl/fi/tq7x8abap01qs1jex5aqy/Uzumaki-Opening-theme-Song-Intro-Anime.mp3?rlkey=qjauevwei7uihfnvx8etdvl7f&st=iewsreh2&raw=1" type="audio/mpeg"></audio>
+  <audio id="tondemo-ost" loop><source src="https://www.dropbox.com/scl/fi/z3nw0hlps4tjwqipc1axy/Tondemo-Skill-de-Isekai-Hourou-Meshi-Opening-Full-Luxury-Spoon-Van-de-Shop-Sub-Espa-ol-Latino.mp3?rlkey=vhlgiylxa9ej2tgy4q9wtf8vl&st=u7j9u5q1&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -1959,15 +1961,37 @@
       32: {
         title: "Tsugunai Subbed",
         desc: "Nuestro mc vive con su hermana, Nana, después de que sus padres murieran en un accidente. Crecieron compartiendo momentos tristes y felices juntos. Pero un día, Nana tuvo que pasar por una vida terrible, fue asaltada por un grupo de hombres ricos y quedó extremadamente traumatizada. Quería vengarse de esos sucios hombres ricos. Mc se convierte en profesor de secundaria donde estudia la hija de los ricos. Después de retomar el momento, los invitó a una villa remota para recibir clases complementarias. Cerró la puerta para asegurarse de que ninguno de ellos escapara y se vengara por primera vez de la chica llamada Ruriko, que tenía el mayor respeto por su asqueroso padre que agredió a la hermana de mc. El resto de la chica trató de huir, pero ¿serán capaces de escapar de la ira de mc?",
-        cover: "Tsugunai Subbed portada.jpg",
+        cover: "TsugunaiSubbed.jpg",
         seasons: [
           {
             num: 1,
-            cover: "https://www.dropbox.com/scl/fi/ruk16o8fpf448j739rdi7/1n8KjfuP_o-1.jpg?rlkey=ac1scvwpd8swujz8g2k1bkwkm&st=h1cva2z5&raw=1",
+	    name: "Episodio 1",
+            cover: "Tsugunai Subbed portada.jpg",
             eps: [
               { title: "Tsugunai Subbed Cap 1"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Episodio 2",
+            cover: "https://www.dropbox.com/scl/fi/jodlrfmjspmchlgnkcl75/1-5-scaled.jpg?rlkey=wlplaei093sf9llnwy7viqj9t&st=58pdmcpz&raw=1",
+            eps: [
               { title: "Tsugunai Subbed Cap 2"},
+            ]
+          },
+          {
+            num: 3,
+	    name: "Episodio 3",
+            cover: "https://www.dropbox.com/scl/fi/55684q9fs1scrgzt673ws/c1207375package-scaled.jpg?rlkey=jkg4qtm7ma1amjd77xd38kc7q&st=kd7b3hxp&raw=1",
+            eps: [
               { title: "Tsugunai Subbed Cap 3"},
+            ]
+          },
+          {
+            num: 4,
+	    name: "Episodio 4",
+            cover: "https://www.dropbox.com/scl/fi/ruk16o8fpf448j739rdi7/1n8KjfuP_o-1.jpg?rlkey=ac1scvwpd8swujz8g2k1bkwkm&st=h1cva2z5&raw=1",
+            eps: [
               { title: "Tsugunai Subbed Cap 4"},
             ]
           }
@@ -2532,6 +2556,49 @@
           }
         ]
       },
+      45: {
+        title: "Tondemo Skill de Isekai Hourou Meshi",
+        desc: "Tsuyoshi Mukoda es un oficinista cualquiera al que de repente transportan a otro mundo. La habilidad única que obtiene al llegar a este nuevo mundo es una que parece un tanto inútil, “Supermercado Online”. Al inicio Mukoda está muy deprimido, ¡pero resulta que toda la comida moderna que puede proporcionar a este nuevo mundo con su nueva habilidad tiene algunos efectos increíbles!",
+        cover: "todemo.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/w97i64p4kr14uk0y00prb/5q0oW3C6VOtX-RKU7QfJCn4rt1SgjRbbtciZmqz7AsI.jpg?rlkey=oe6zk4sr5t6cccvm9kjv6hxaq&st=1ri0jwi7&raw=1",
+            eps: [
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 1"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 2"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 3"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 4"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 5"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 6"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 7"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 8"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 9"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 10"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 11"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T1 Cap 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/6qf8b9v8htkye6hitgu0i/MV5BZjIyMzY0MDQtOThjZS00ZWNkLWI3ODgtZTY1OWJhYWU2MjZiXkEyXkFqcGc-._V1_FMjpg_UX1000_.jpg?rlkey=m7b2hww7iecb9nmh3gl2pt05r&st=hn7qr180&raw=1",
+            eps: [
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 1"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 2"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 3"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 4"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 5"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 6"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 7"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 8"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 9"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 10"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 11"},
+              { title: "Tondemo Skill de Isekai Hourou Meshi T2 Cap 12"},
+            ]
+          }
+        ]
+      },
 
 
     };
@@ -2719,6 +2786,7 @@
         41: ['Mashle-ost'],
         42: ['Maomao1-ost','Maomao2-ost','Maomao3-ost'],
         44: ['uzumaki-ost'],
+        45: ['tondemo-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
