--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
 <option>Animación</option>
 <option>Aventura</option>
 <option>Ciencia ficción</option>
+<option>Cocina</option>
 <option>Comedia</option>
 <option>Comedia oscura</option>
 <option>Crimen</option>
@@ -418,7 +419,7 @@
       {id:29, title:"One Piece (Live Action)", img:"onepieceportada.jpg", rating:4.8, genres:["Aventura","Comedia","Acción","Fantasía","Drama"]},
       {id:30, title:"Shoujo Ramune", img:"shoujoramuneportada.jpg", rating:4.3, genres:["Hentai","Harem","Incesto"]},
       {id:31, title:"To Your Eternity", aliases: ["Fumetsu no Anata e"], img:"fumetsuportada.jpg", rating:4.8, genres:["Fantasía","Drama","Aventura","Shōnen","Sobrenatural"]},
-      {id:32, title:"Tsugunai Subbed", img:"Tsugunai Subbed portada.jpg", rating:4.8, genres:["Hentai","Harem","Escolar"]},
+      {id:32, title:"Tsugunai Subbed", img:"TsugunaiSubbed.jpg", rating:4.8, genres:["Hentai","Harem","Escolar"]},
       {id:33, title:"Blue Lock", aliases: ["Yoichi Isagi"], img:"Bluelockportada.jpg", rating:4.8, genres:["Thriller","Psicológico","Shōnen","Deportivo","Survival Game"]},
       {id:34, title:"Magic Maker: Isekai Mahou no Tsukurikata", aliases: ["Magic Maker: How to Make Magic in Another World"], img:"magic maker.jpg", rating:4.4, genres:["Fantasía","Isekai","Aventura","Slice of Life","Shōnen"]},
       {id:35, title:"Tsuyokute New Saga", aliases: ["New Saga"], img:"New Saga.jpg", rating:4.5, genres:["Fantasía","Isekai","Aventura","Comedia","Acción","Drama","Slice of Life","Shōnen"]},
@@ -430,7 +431,9 @@
       {id:41, title:"Mashle", aliases: ["Mash Burnedead"], img:"mashle1.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Aventura","Shōnen"]},
       {id:42, title:"Los Diarios de la Boticaria", aliases: ["Kusuriya no Hitorigoto","The Apothecary Diaries"], img:"maomaot1.jpg", rating:4.9, genres:["Drama","Misterio","Romance","Shōjo"]},
       {id:43, title:"Maplestar", img:"pm.png", rating:5, genres:["Hentai"]},
-      {id:44, title:"Uzumaki", img:"uzumakii.jpg", rating:4.2, genres:["Seinen","Horror"]},
+      {id:44, title:"Uzumaki", img:"uzumakii.jpg", rating:5, genres:["Horror","Seinen"]},
+      {id:45, title:"Tondemo Skill de Isekai Hourou Meshi", aliases: ["Campfire Cooking in Another World with My Absurd Skills"], img:"todemo.jpg", rating:5, genres:["Comedia","Fantasía","Shōnen","Slice of Life","Comida","Aventura"]},
+
     ];
 
 
