--- a/video-player.html
+++ b/video-player.html
@@ -1295,8 +1295,14 @@
       "32": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/kj79c7ts1h7p70wtqbb3y/Tsugunai-Subbed-Cap-1.mp4?rlkey=eog59ldhku6wwqovibjfgr9r1&st=4vunfix2&raw=1', title:'Tsugunai Subbed SUB Cap 1' },
+        },
+        "2": {
           "2": { link:'https://www.dropbox.com/scl/fi/8trdqujmfiac8zmwqk55f/Tsugunai-Subbed-Cap-2.mp4?rlkey=44ggx7uhpwwpeyg8bf10r8s3p&st=jcdeqcr1&raw=1', title:'Tsugunai Subbed SUB Cap 2' },
+        },
+        "3": {
           "3": { link:'https://www.dropbox.com/scl/fi/6lqaol686fkktk16o2jgl/Tsugunai-Subbed-Cap-3.mp4?rlkey=kmpx130t8n8vknwu5pnswy4qv&st=59c1uubg&raw=1', title:'Tsugunai Subbed SUB Cap 3' },
+        },
+        "4": {
           "4": { link:'https://www.dropbox.com/scl/fi/ytpnotvj9rurxs20nwxmk/Tsugunai-Subbed-Cap-4.mp4?rlkey=f9h9k3olzzyzlosstu3u34g0v&st=eb8imc60&raw=1', title:'Tsugunai Subbed SUB Cap 4' },
         }
       },
@@ -1644,7 +1650,36 @@
           "4": { link:'https://www.dropbox.com/scl/fi/0r4pyft3zz08g4bozm49y/Uzumaki-Capitulo-4.mp4?rlkey=ff2nfzzcar0cm4rlak0w16kmf&st=o8ilvoba&raw=1', title:'Uzumaki T1 Cap 4' },
         }
       },
-
+      "45": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/tb4oae1qqkh5zrm0eelix/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-1.mp4?rlkey=04ihhfkkwd9kz4ur0lc8pxhfc&st=sw35qx5a&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/vppcx0co143ijd8qa9hxf/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-2.mp4?rlkey=yh7g5xy2yracowrh07ydni54j&st=rtl67gc1&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/nitais3fdys70fwfl9pbs/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-3.mp4?rlkey=sd3tuasg3zz0hilyzqu9k6nlt&st=4k1zq7p0&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/7jyss00efkc0nwy48l6qh/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-4.mp4?rlkey=a5tsesr19xxkcjj7fukrye9us&st=6eqlmfhc&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/7c75tx94396o6sxen2h69/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-5.mp4?rlkey=2x009l7r4oue1jq32zu9qelvg&st=c1otmz62&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/v6s5g0btmd7qjb6pm1zm6/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-6.mp4?rlkey=39ixr7cblybuvcnus2ljbzvf6&st=7jukhf7h&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/hsnp4sqdce84435ntanr1/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-7.mp4?rlkey=vn6u2db6amunlapmacx9f1ts4&st=j93j2vce&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/yq9en4xny9prewisj6g2q/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-8.mp4?rlkey=18lfmb7o0ci6hl7un3nalpoh6&st=ak3vef75&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/3wp0td1rsjr8f7f8u0c8h/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-9.mp4?rlkey=bszcjqbefqoh0cb6pwygdie62&st=a63l7q7o&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/7lhc7hirz2rl41kfp7v2q/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-10.mp4?rlkey=5wdh8e4bvvf9ygup92kojesji&st=0l6byro8&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/col93xxp4c9ua2ommcqwj/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-11.mp4?rlkey=g7e9c7w89a2f487m36pg49gyx&st=h8bhfdh2&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/f8gszus5q8xxtqib0q23k/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-12.mp4?rlkey=vwn3zrkhtm5p827b8ppm083lb&st=vtr5arii&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 12' },
+        },
+        "2": {
+          "1": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 1' },
+          "2": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 2' },
+          "3": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 3' },
+          "4": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 4' },
+          "5": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 5' },
+          "6": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 6' },
+          "7": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 7' },
+          "8": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 8' },
+          "9": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 9' },
+          "10": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 10' },
+          "11": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 11' },
+          "12": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 12' },
+        }
+      },
 
 
     };
