--- a/anime-detail.html
+++ b/anime-detail.html
@@ -221,6 +221,7 @@
   <audio id="Maplestar-ost" loop><source src="https://www.dropbox.com/scl/fi/ks7rvqfmw6lnyisdz07de/dfgdfg.mp3?rlkey=w76qkjl9t2yer2u9xwf8041v8&st=189sbps1&raw=1" type="audio/mpeg"></audio>
   <audio id="uzumaki-ost" loop><source src="https://www.dropbox.com/scl/fi/tq7x8abap01qs1jex5aqy/Uzumaki-Opening-theme-Song-Intro-Anime.mp3?rlkey=qjauevwei7uihfnvx8etdvl7f&st=iewsreh2&raw=1" type="audio/mpeg"></audio>
   <audio id="tondemo-ost" loop><source src="https://www.dropbox.com/scl/fi/z3nw0hlps4tjwqipc1axy/Tondemo-Skill-de-Isekai-Hourou-Meshi-Opening-Full-Luxury-Spoon-Van-de-Shop-Sub-Espa-ol-Latino.mp3?rlkey=vhlgiylxa9ej2tgy4q9wtf8vl&st=u7j9u5q1&raw=1" type="audio/mpeg"></audio>
+  <audio id="muneca-ost" loop><source src="https://www.dropbox.com/scl/fi/arzidxum6qqn27x7o6mmb/MV-TV-anime-My-Dress-Up-Darling-Season-2-Opening-Theme.mp3?rlkey=cavkywi87u1cnli730obp0dee&st=p3y6xvxt&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2599,7 +2600,49 @@
           }
         ]
       },
-
+      46: {
+        title: "My Dress-Up Darling",
+        desc: "Gojo Wakana es un estudiante de preparatoria que quiere convertirse en un maestro del tradicional arte de crear muñecas Hina. Aunque adora ese arte, no sabe nada de las últimas tendencias y eso hace que le cueste encajar con sus compañeros de clase. Los más populares de la clase, en especial una chica llamada Marin Kitagawa, parecen creer que él vive en un mundo aparte. Todo esto cambia por completo un día cuando Marin comparte un secreto inesperado con él y hace que sus dos mundos coincidan.",
+        cover: "muneca.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/sgssq24vusnr09wos4hkc/temporada-1.jpg?rlkey=fuks85o0zhjdg1k9yub702sti&st=rc85ffbo&raw=1",
+            eps: [
+              { title: "My Dress-Up Darling T1 Cap 1"},
+              { title: "My Dress-Up Darling T1 Cap 2"},
+              { title: "My Dress-Up Darling T1 Cap 3"},
+              { title: "My Dress-Up Darling T1 Cap 4"},
+              { title: "My Dress-Up Darling T1 Cap 5"},
+              { title: "My Dress-Up Darling T1 Cap 6"},
+              { title: "My Dress-Up Darling T1 Cap 7"},
+              { title: "My Dress-Up Darling T1 Cap 8"},
+              { title: "My Dress-Up Darling T1 Cap 9"},
+              { title: "My Dress-Up Darling T1 Cap 10"},
+              { title: "My Dress-Up Darling T1 Cap 11"},
+              { title: "My Dress-Up Darling T1 Cap 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/y2n6m8apw5mf26djl7j9d/dfghdf.jpg?rlkey=fxe6zlr8u0g2c2coq3we4luq1&st=lv2y4k4f&raw=1",
+            eps: [
+              { title: "My Dress-Up Darling T2 Cap 1"},
+              { title: "My Dress-Up Darling T2 Cap 2"},
+              { title: "My Dress-Up Darling T2 Cap 3"},
+              { title: "My Dress-Up Darling T2 Cap 4"},
+              { title: "My Dress-Up Darling T2 Cap 5"},
+              { title: "My Dress-Up Darling T2 Cap 6"},
+              { title: "My Dress-Up Darling T2 Cap 7"},
+              { title: "My Dress-Up Darling T2 Cap 8"},
+              { title: "My Dress-Up Darling T2 Cap 9"},
+              { title: "My Dress-Up Darling T2 Cap 10"},
+              { title: "My Dress-Up Darling T2 Cap 11"},
+              { title: "My Dress-Up Darling T2 Cap 12"},
+            ]
+          }
+        ]
+      },
 
     };
 
@@ -2785,8 +2828,10 @@
         40: ['OnePunch-ost'],
         41: ['Mashle-ost'],
         42: ['Maomao1-ost','Maomao2-ost','Maomao3-ost'],
+        43: ['Maplestar-ost'],
         44: ['uzumaki-ost'],
         45: ['tondemo-ost'],
+        46: ['muneca-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
