--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
       {id:40, title:"One Punch-Man", aliases: ["One-Punch Man"], img:"onepunch.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Seinen","Ciencia ficción","Superhéroes"]},
       {id:41, title:"Mashle", aliases: ["Mash Burnedead"], img:"mashle1.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Aventura","Shōnen"]},
       {id:42, title:"Los Diarios de la Boticaria", aliases: ["Kusuriya no Hitorigoto","The Apothecary Diaries"], img:"maomaot1.jpg", rating:4.9, genres:["Drama","Misterio","Romance","Shōjo"]},
-      {id:43, title:"Maplestar", img:"pm.png", rating:4.2, genres:["Hentai"]},
-      {id:44, title:"Uzumaki", img:"uzumakii.jpg", rating:5, genres:["Horror","Seinen"]},
+      {id:43, title:"Maplestar", img:"pm.png", rating:5, genres:["Hentai","Animación"]},
+      {id:44, title:"Uzumaki", img:"uzumakii.jpg", rating:4.2, genres:["Horror","Seinen"]},
       {id:45, title:"Tondemo Skill de Isekai Hourou Meshi", aliases: ["Campfire Cooking in Another World with My Absurd Skills"], img:"todemo.jpg", rating:4.9, genres:["Comedia","Fantasía","Shōnen","Slice of Life","Comida","Aventura"]},
       {id:46, title:"My Dress-Up Darling", aliases: ["Sono Bisque Doll wa Koi wo Suru"], img:"muneca.jpg", rating:4.9, genres:["Comedia","Romance","Seinen","Slice of Life","Escolar","Cosplay"]},
 
