--- a/anime-detail.html
+++ b/anime-detail.html
@@ -165,7 +165,7 @@
 <body>
   <!-- Vídeo de fondo: tiene poster para que el navegador muestre la imagen hasta que haya primer frame -->
   <video id="bg-video" poster="galaxia-poster.jpg" autoplay muted loop playsinline>
-    <source src="galaxia.mp4" type="video/mp4">
+    <source src="https://www.dropbox.com/scl/fi/li2qhsanszr7xq5djd0q2/yyyy.mp4?rlkey=t1bslzrsmw7bfzu87e7zcyv73&st=ueszswb5&raw=1" type="video/mp4">
   </video>
   <!-- overlay con la imagen/poster: se ocultará cuando el video dispare 'playing' -->
   <div id="overlay"></div>
