--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
 
   <!-- Vídeo de fondo (agregado poster para que el navegador muestre la imagen hasta que haya primer frame) -->
   <video id="bg-video" poster="galaxia-poster.jpg" autoplay muted loop playsinline>
-    <source src="galaxia.mp4" type="video/mp4">
+    <source src="https://www.dropbox.com/scl/fi/li2qhsanszr7xq5djd0q2/yyyy.mp4?rlkey=t1bslzrsmw7bfzu87e7zcyv73&st=ueszswb5&raw=1" type="video/mp4">
   </video>
   <div id="overlay"></div>
 
   <audio id="bg-music" autoplay>
-    <source src="https://www.dropbox.com/scl/fi/k85eln5jkukzgw8auarsh/Yo-y-los-que-tuvieron-etapa-Vocaloid-cuando-suena.mp3?rlkey=kpl5z8pbl6gz3w4ob3b8lx3sl&st=90mh5kmo&raw=1" type="audio/mpeg">
+    <source src="https://www.dropbox.com/scl/fi/zup50b851hczhlbakhnan/TICK-TICK-TICK-TICK-TICK-BITE-Archinime.mp3?rlkey=kwm1kfuxhkn3kqrbqbq5wyewj&st=dhdvtk7h&raw=1" type="audio/mpeg">
     Tu navegador no soporta el audio.
   </audio>
 
