--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   <div id="overlay"></div>
 
   <audio id="bg-music" autoplay>
-    <source src="https://www.dropbox.com/scl/fi/zup50b851hczhlbakhnan/TICK-TICK-TICK-TICK-TICK-BITE-Archinime.mp3?rlkey=kwm1kfuxhkn3kqrbqbq5wyewj&st=dhdvtk7h&raw=1" type="audio/mpeg">
+    <source src="https://www.dropbox.com/scl/fi/7lp1tkbioyyi3bj9mhq8y/TICK-TICK-TICK-TICK-TICK-BITE-Archinime.mp3?rlkey=vsg0gby24ceyakz88tnh7gt3f&st=e4yuprpe&raw=1" type="audio/mpeg">
     Tu navegador no soporta el audio.
   </audio>
 
