--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
   <!-- Vídeo de fondo (agregado poster para que el navegador muestre la imagen hasta que haya primer frame) -->
   <video id="bg-video" poster="galaxia-poster.jpg" autoplay muted loop playsinline>
-    <source src="https://www.dropbox.com/scl/fi/li2qhsanszr7xq5djd0q2/yyyy.mp4?rlkey=t1bslzrsmw7bfzu87e7zcyv73&st=ueszswb5&raw=1" type="video/mp4">
+    <source src="https://www.dropbox.com/scl/fi/ex4qhvjtx54blr92d0saj/yyyy.mp4?rlkey=ip9vhlhlsl1ye7el3onl1u2ug&st=f8o90thc&raw=1" type="video/mp4">
   </video>
   <div id="overlay"></div>
 
